tests/pos/ExponentiationPosTest.hs
module ExponentiationPosTest where

test :: Floating a => a
test = 3 ** (-1)

test2 :: Floating a => a
test2 = 0 ** 2
